--- a/views/room.ejs
+++ b/views/room.ejs
@@ -56,17 +56,27 @@
             width: 100%;
             height: 10%;
             display: flex;
-            justify-content: center;
+            justify-content: space-evenly;
             align-items: center;
             position: relative;
         }
 
+        #left-section, #right-section {
+            display: flex;
+        }
+
+        #right-section > button, #left-section > button {
+            margin: 3px;
+        }
+        
+
         #video-container {
-            min-width: 30%;
-            max-width: 30%;
+            padding: 10px;
+            min-width: 40%;
+            max-width: 40%;
             height: 100%;
             display: flex;
-            justify-content: space-evenly;
+            justify-content: center;
             align-items: center;
             align-content: center;
             flex-wrap: wrap;
@@ -96,7 +106,7 @@
         }
 
         #side-bar-container {
-            width: 70%;
+            width: 60%;
             height: 100%;
             top: 0;
             display: flex;
@@ -163,6 +173,7 @@
             width: 25%;
             position: relative;
             transition: 1s;
+            margin: 10px;
         }
 
         .button-small-custom {
@@ -952,6 +963,10 @@
             padding: 4px;
             z-index: 4;
         }
+
+        .square-button {
+            background-color: red;
+        }
     </style>
 </head>
 
@@ -972,27 +987,13 @@
             </div>
         </section>
         <section id="bottom-container">
-            <button class="btn button-small-custom" id="user-mic-button">
-                <span id="user-mic-button-tooltip">Microphone</span>
-                <img src="/assets/pictures/micOn.png" id="mic-image" />
-            </button>
-            <button class="btn button-big-custom" id="user-hang-up-button">
-                <span id="user-hang-up-button-tooltip">Hang Up</span>
-                <img src="/assets/pictures/hangUp.png" />
-            </button>
-            <button class="btn button-small-custom" id="user-record-button">
-                <span id="user-record-button-tooltip">Record</span>
-                <i class="far fa-dot-circle" id="record-image" style="color: #bbb;"></i>
-            </button>
-            <button class="btn button-small-custom" id="option-button">
-                <span id="option-button-tooltip">Settings</span>
-                <i class="fas fa-ellipsis-v" style="color: white;"></i>
-                <div id="option-menu" class="invisible">
-                    <ul id="all-option-menu">
-                        <li id="stay-tuned" style="font-size: 13px;">Stay Tuned For New Feature</li>
-                    </ul>
-                </div>
-            </button>
+            <div id="left-section">
+            </div>
+            <div id="right-section">
+                <button class="btn btn-success" id="user-mic-button">
+                    <span>Mute</span>
+                </button>
+            </div>
         </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/nprogress/0.2.0/nprogress.min.js"></script>
