--- a/views/room.ejs
+++ b/views/room.ejs
@@ -115,6 +115,7 @@
             flex-wrap: wrap;
             background-color: #fff;
             overflow-y: hidden;
+            overflow-x: hidden;
         }
 
         #pdf-container {
@@ -126,6 +127,12 @@
             flex-wrap: wrap;
         }
 
+        #pdf-document {
+            width: 100%;
+            height: 100%;
+            padding: 20px;
+        }
+
         #pdf-controller {
             margin: 10px;
             width: 100%;
@@ -134,6 +141,10 @@
             justify-content: center;
             align-items: baseline;
             flex-wrap: wrap;
+        }
+
+        #tata-tertib {
+            padding: 20px;
         }
 
         #user-bar {
@@ -154,6 +165,10 @@
             z-index: 6 !important;
             border-top-left-radius: 10px;
             border-top-right-radius: 10px;
+        }
+
+        .hide-event {
+            display: none !important;
         }
 
         .user-video {
@@ -964,6 +979,14 @@
             z-index: 4;
         }
 
+        .signature {
+            position: absolute;
+            top: 0;
+            left: 0;
+            padding: 5px;
+            font-size: 7px;
+        }
+
         .square-button {
             background-color: red;
         }
@@ -976,12 +999,27 @@
         <section id="upper-container">
             <div id="audio-collection"></div>
             <div id="side-bar-container">
-                <section id="pdf-controller">
-                    <p>Page : <span id="current-page"></span> / <span id="total-page"></span></p>
+                <section id="tata-tertib">
+                    <h1>Tata Tertib Transaksi Jual Beli</h1>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatum aut similique architecto totam, dolor minus et temporibus. Voluptas molestiae, dolore modi delectus praesentium dicta laudantium consequuntur temporibus odit accusantium cupiditate.</p>
                 </section>
-                <div id="pdf-container">
-                    <canvas id="pdf-canvas"></canvas>
-                </div>
+                <section id="pdf-document" class="hide-event">
+                    <div id="pdf-controller">
+                        <p>Page : <span id="current-page"></span> / <span id="total-page"></span></p>
+                    </div>
+                    <div id="pdf-container">
+                        <canvas id="pdf-canvas"></canvas>
+                    </div>
+                </section>
             </div>
             <div id="video-container">
             </div>
