checkpoint jwt access token

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -155,6 +155,7 @@
 </head>
 
 <body>
+    <%- include('partials/provider2.ejs') %>
     <div class="full-container">
         <section class="left-bar text-center">
             <img class="icons-meet" src="/assets/pictures/icons-meeting.png"/>
