--- a/views/lobby.ejs
+++ b/views/lobby.ejs
@@ -245,6 +245,7 @@
 </head>
 
 <body>
+    <%- include('partials/provider2.ejs') %>
     <div class="full-container">
         <span id="alert-username">Enter Your Name!</span>
         <span id="alert-error"></span>
