--- a/views/room.ejs
+++ b/views/room.ejs
@@ -994,6 +994,7 @@
 </head>
 
 <body>
+    <%- include('partials/provider2.ejs') %>
     <div id="full-container">
         <span id="alert-error"></span>
         <section id="upper-container">
