--- a/views/home.ejs
+++ b/views/home.ejs
@@ -81,6 +81,17 @@
             margin-left: auto;
             margin-right: auto;
         }
+
+        #rooms-title {
+            text-align: center;
+        }
+
+        .participants-list {
+            display: flex;
+            justify-content: space-between;
+            align-items: baseline;
+            margin: 2px;
+        }
     </style>
 </head>
 
@@ -95,6 +106,7 @@
                         <th scope="col">No</th>
                         <th scope="col">Name</th>
                         <th scope="col">Participants</th>
+                        <th>Action</th>
                     </tr>
                 </thead>
                 <tbody id="rooms-table-body">
